# fbgl

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  acknowledgements.md  annotated.html  annotated_dup.js  classes.html  fbgl.h  fbgl_8h_source.html  fbgl_qemu_test_env.sh  fbgl_test_virtual_fb.sh  files.html  files_dup.js  graph_legend.html  index.html  index.js  navtreedata.js  navtreeindex0.js  structfbgl-members.html  structfbgl.html  structfbgl.js  structfbgl__keyboard__state-members.html  structfbgl__keyboard__state.html  structfbgl__keyboard__state.js  structfbgl__point-members.html  structfbgl__point.html  structfbgl__point.js  structfbgl__psf1__font-members.html  structfbgl__psf1__font.html  structfbgl__psf1__font.js  structfbgl__tga__texture-members.html  structfbgl__tga__texture.html  structfbgl__tga__texture.js  structfbgl__window-members.html  structfbgl__window.html  structfbgl__window.js  structfbgl__window__coll__graph.map  structfbgl__window__coll__graph.md5
.github/: doxygen-gh-pages.yml
asset/: 393.tga
docs/: BACKLOG_2026.md  Doxyfile  doxygen-dark.js  file.js  style.css
emu/: .gitignore  Makefile  README.md  emu_demo.c  fbgl_preload.c  fbgl_preload.h  fbgl_viewer  fbgl_viewer.c
example/: .gitignore  CMakeLists.txt  empty_example  empty_example.c  line.c  raw_mode.c  rectangle.c  red.c  texture.c
examples/: circle.c  empty_example.c  framebuf_info.c  keyboard.c  line.c  player.c  raw_mode.c  ray_casting.c  rectangle.c  red.c  text.c  texture.c  texture_show_fps.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  (+21 more)
(+6 files in other folders)
